--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "MAOYUANLI.jpg"
   name             : "MAOYUAN LI"
   pronouns         : # example: "she/her"  
-  bio              : #"Short biography for the left-hand sidebar"
+  bio              : #""
   location         : #"Earth"
   employer         : #"Red Brick University"
   uri              : # URL
