--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   avatar           : "MAOYUANLI.png"
   name             : "MAOYUAN LI"
   pronouns         : # example: "she/her"  
-  bio              : #""
-  location         : #"Earth"
+  bio              : #"JSPS fellow at Tokyo Institute of Technology"
+  location         : "Tokyo, Japan"
   employer         : #"Red Brick University"
   uri              : # URL
   email            : "maoyuan.li.bit@gmail.com" 
