--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "MAOYUANLI.png"
   name             : "MAOYUAN LI"
   pronouns         : # example: "she/her"  
-  bio              : #"JSPS fellow at Tokyo Institute of Technology"
+  bio              : "JSPS fellow at Tokyo Institute of Technology"
   location         : "Tokyo, Japan"
   employer         : #"Red Brick University"
   uri              : # URL
