--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,28 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research"
+    url: /Research/
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+  - title: "Project"
+    url: /Research/  
+
   - title: "CV"
-    url: /cv/
+    url: /cv/  
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Talks"
+  #   url: /talks/    
+
+ #  - title: "Teaching"
+ #   url: /teaching/    
+    
+ # - title: "Portfolio"
+ #   url: /portfolio/
+        
+ #  - title: "Blog Posts"
+ #    url: /year-archive/
+    
+
+    
+ #  - title: "Guide"
+ #    url: /markdown/
