--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : # "https://www.linkedin.com/in/maoyuan-li-63a2b0238/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
