--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /Project/  
 
   - title: "CV"
-    url: /cv/  
+  url:../assets/Curriculum_Vitae.pdf
     
   # - title: "Talks"
   #   url: /talks/    
