--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /Project/  
 
   - title: "CV"
-  url:../assets/Curriculum_Vitae.pdf
+   url: /CV/  
     
   # - title: "Talks"
   #   url: /talks/    
