--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,14 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Research"
-    url: /Research/
+  #  - title: "Research"
+    #  url: /Research/
 
-  - title: "Project"
-    url: /Project/  
+   # - title: "Project"
+     # url: /Project/  
 
   - title: "CV"
-   url: /CV/  
+    url: /CV/  
     
   # - title: "Talks"
   #   url: /talks/    
