--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "MAOYUANLI.png"
+  avatar           : "MAOYUANLI1.png"
   name             : "MAOYUAN LI"
   pronouns         : # example: "she/her"  
-  bio              : "JSPS fellow at Tokyo Institute of Technology"
+  bio              : "JSPS fellow at the Institute of Science Tokyo"
   location         : "Tokyo, Japan"
   employer         : #"Red Brick University"
   uri              : # URL
