--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "MAOYUANLI1.png"
   name             : "MAOYUAN LI"
   pronouns         : # example: "she/her"  
-  bio              : "JSPS fellow at the Institute of Science Tokyo"
+  bio              : "Researcher at the University of Electro-Communications"
   location         : "Tokyo, Japan"
   employer         : #"Red Brick University"
   uri              : # URL
